poll api docs added
